--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ main{
 h2{
   font-size: 40px;
   /* margin: 20px; */
-  text-align: center;
+  text-align: left;
 }
 .right-section{
   width: 50%;
@@ -72,7 +72,8 @@ main>section>span{
 
 .footer-2{
   background-color: #f4f6f8;
-  
+  padding-top: 20px;
+  padding-bottom: 20px;
 
 }
 
